# telegram-bot-development

./: .gitignore  README.md  phantomroll.py  requirements.txt  setup.py
config/: settings.json
controller/bindings/: cpp_bridge.py
controller/python/: combo_finder.py  main_controller.py  phantomroll_session.session  pyro_client.py  telethon_client.py  test_login.py  test_session.session
core/cplusplus/: message_deleter.cpp  message_deleter.h
core/cplusplus/phantomroll/installer/: build_installer.sh
interface/cli/: launch.py  phantomroll_session.session
phantomroll/core/cplusplus/: CMakeLists.txt  main.cpp
phantomroll/core/cplusplus/include/core/: message_handler.hpp  socket_server.hpp
phantomroll/core/cplusplus/src/core/: message_handler.cpp  socket_server.cpp  telegram_session.cpp
phantomroll/core/cplusplus/src/utils/: config_loader.cpp
phantomroll/tools/: rebuild_config.py
phantomroll/ui/java/: PhantomRollUI.java
